--- a/templates/rules_page.html
+++ b/templates/rules_page.html
@@ -95,11 +95,11 @@
 <body>Elapsed time &gt; 30 seconds: 0 points</body>
 
 <h2>Notes</h2>
-<body>You only need 1 of the listed artists to get the artist points.</body>
+<body>You need to identify the lead artist credited with the song to get the full points.</body>
 <br>
-<body>You don't need to specify if the song is a cover, remix, acoustic, etc. Just the title.</body>
+<body>You don't need to specify if the song is a cover, remix, acoustic, or who is featuring, etc. Just the title.</body>
 <br>
-<body>Guesses are not case sensitive (i.e., "lucid dreams" would be acceptable for "Lucid Dreams")</body>
+<body>Guesses are not case sensitive (i.e., "clouds" would be acceptable for "CLOUDS")</body>
 <br>
 <body>However, spelling needs to be perfect (i.e., "Chasing You" would NOT be acceptable for "Chasin' You")</body>
 <br>
