--- a/templates/result_page.html
+++ b/templates/result_page.html
@@ -6,6 +6,9 @@
 
 {% block body %} 
 
+<h1 style="text-align: center; font-size: 2.5em; margin-bottom: 0;">🎵Quizify🎵</h1>
+<h2 style = "text-align: center;">Thanks For Playing!</h2>
+<h2 style = "text-align: center;">You Got ___ Points</h2>
 
 
 {% endblock %}
