--- a/templates/num_songs_select.html
+++ b/templates/num_songs_select.html
@@ -3,6 +3,7 @@
 {% extends 'base.html' %}
 
 {% block head %} 
+<title>Quizify</title>
 <style>
     .container {
         display: flex;
@@ -25,9 +26,7 @@
         font-size: inherit;
     }
 
-    .logout {
-        text-align: right;
-    }
+    
     .hamburger {
         position: absolute;
         top: 15px;
@@ -68,8 +67,10 @@
 <button class="hamburger">&#9776;</button>
 
 <nav class="hamburger-menu">
+    <a href= "{{ url_for('playlist_select') }}">Select Playlist</a>
     <a href="{{ url_for('rules') }}">Rules</a>
     <a href="{{ url_for('logout') }}">Logout</a>
+    
 </nav>
 
 <h1 style="text-align: center; font-size: 2.5em; margin-bottom: 0;">🎵Quizify🎵</h1>
@@ -79,7 +80,7 @@
         <br>
         <form method="POST">
             <label for="num_songs" style="font-size: inherit;">How many songs do you want to play with?</label>
-            <input type="number" id="num_songs" name="num_songs" min="1" required>
+            <input type="number" id="num_songs" name="num_songs" min="1" max="{{total_songs_in_playlist}}" required>
             <input type="submit" value="Start Game">
         </form>
         
