--- a/templates/rules_page.html
+++ b/templates/rules_page.html
@@ -47,7 +47,7 @@
 <button class="hamburger">&#9776;</button>
 
 <nav class="hamburger-menu">
-     <a href="{{ url_for('logout') }}">Logout</a>
+     <a style = "text-align: left;" href="{{ url_for('logout') }}">Logout</a>
 </nav>
 
 <h1 style="text-align: center; font-size: 2.5em; margin-bottom: 0; margin-top: 0;">🎵Quizify🎵</h1>
