ready to start doing ui

--- a/templates/num_songs_select.html
+++ b/templates/num_songs_select.html
@@ -84,7 +84,7 @@
             <input type="submit" value="Start Game">
         </form>
         
-        <p style="font-size: 0.75em;">*May take a while for liked songs playlist</p>
+        <p style="font-size: 0.75em;">*May take a little longer for liked songs playlist</p>
 
     </div>
 </div>
