--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -12,6 +12,8 @@
 <br>
 <br>
 <body style="text-align: center; font-size: 2em;">Log into your Spotify account below to find out!</body>
+<br>
+<body style="text-align: center; font-size: .5em;">Premium Account Required</body>
 
 <div style="display: flex; justify-content: center; align-items: center; height: 50vh; font-size: 1em;">
     <img src="{{ url_for('static', filename='icon3@2x.png') }}" alt="Image description" style="width: 50px; height: 50px; margin-right: 10px;">
